Updated code from Spencer.

--- a/obi/security_audit/templates/audit_results.html
+++ b/obi/security_audit/templates/audit_results.html
@@ -41,7 +41,7 @@
 <table  style="border: 0px !important;">
     <tr style="border: 0px !important;"><td><h2>Permissions</h2></td><td><h2>Application Roles</h2></td></tr>
     <tr>
-        <td>
+        <td style="vertical-align:top">
          <table>
  <tr>
    <th>ACL</th>
@@ -102,4 +102,3 @@
 </table>
 </body>
 </html>
-
