--- a/obi/security_audit/templates/no_audit_results.html
+++ b/obi/security_audit/templates/no_audit_results.html
@@ -41,7 +41,7 @@
 <table  style="border: 0px !important;">
     <tr style="border: 0px !important;"><td><h2>Permissions</h2></td><td><h2>Application Roles</h2></td></tr>
     <tr>
-        <td>
+        <td style="vertical-align:top">
          <table>
  <tr>
    <th>ACL</th>
@@ -97,7 +97,7 @@
         </td>
         <td>
             {{ data|safe }}
-                <p>The tested OBIEE12c environments' app role mappings are consistent.</p>
+                <p>The tested OBIEE12c environments' application role mappings are consistent.</p>
 
         </td>
     </tr>
